# book-review-fastapi

./: .env.example  .gitignore  Makefile  a.ipynb  hello.py  pyproject.toml
migrations/: env.py
migrations/versions/: 83d1a8803bcc_add_password_hash.py  a32f8ddb2a50_init.py
src/: __init__.py  config.py
src/auth/: models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py
